k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: odoo-test17-__ENV__
  namespace: k-erp-test17-__ENV__
spec:
  type: ClusterIP
  selector:
    app: odoo-test17-__ENV__
  ports:
    - port: 8069
      targetPort: 8069
      name: odoo
    - port: 8072
      targetPort: 8072
      name: longpolling
