k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: odoo-test17-__ENV__-ingress-service
  namespace: k-erp-test17-__ENV__
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "1G"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "6h"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "5s"
    nginx.ingress.kubernetes.io/proxy-redirect-from: "off"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "64k"
    nginx.ingress.kubernetes.io/proxy-max-temp-file-size: "2048m"
spec:
  tls:
    - hosts:
      - __ODOO_URL__
      secretName: test17-__ENV__
  rules:
  - host: __ODOO_URL__
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: odoo-test17-__ENV__
            port:
              number: 8069
      - path: /longpolling/poll
        pathType: Prefix
        backend:
          service:
            name: odoo-test17-__ENV__
            port:
              number: 8072
      - path: /longpolling/im/poll
        pathType: Prefix
        backend:
          service:
            name: odoo-test17-__ENV__
            port:
              number: 8072
      - path: /websocket
        pathType: Prefix
        backend:
          service:
            name: odoo-horedis-__ENV__
            port:
              number: 8072
